# monkey-playground

./: Cargo.toml  README.md  index.html  tailwind.config.js
src/: main.rs  samp_exec.rs
src/frontend/: atoms.rs  code_snips.rs  mod.rs  repl.rs  runner.rs  utils.rs
src/monkey/: mod.rs
src/monkey/evaluator/: main.rs  mod.rs  tests.rs
src/monkey/lexer/: base_types.rs  main.rs  mod.rs  tests.rs  tokens.rs
src/monkey/parser/: main.rs  mod.rs  tests.rs  types.rs
src/monkey/vm/: compiler.rs  machine.rs  mod.rs  types.rs
