[package]
name = "monkey-playground"
version = "0.1.0"
edition = "2021"

[dependencies]
console_error_panic_hook = "0.1.7"
leptos = { version = "0.7.0-rc1", features = ["csr", "nightly"] }
chrono = { version = "0.4.38"}

[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
